# Mental

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  Mental.iss  README.md  build.sh  format.sh  imgui.ini  log  main.c  meson.build
.trunk/: trunk.yaml
HeaderFiles/: Component.hpp  LuaBindings.hpp  Mental.hpp  RenderPipeline.hpp  Ui.hpp
Scripts/: Character.lua  RootObjectScript.lua  background_component.lua  new_component.lua  sprite_component.lua  triangle_component.lua
Shaders/: rect.vert  rectangle.frag
SourceFiles/: Component.cpp  Mental.cpp  RenderPipeline.cpp  Ui.cpp  main.cpp
SourceFiles/Components/: AnimatedSprite2D.cpp  Camera.cpp  Rect.cpp  Sprite2D.cpp  Triangle.cpp
core/: mental.h  types.h
engine/: engine.c  engine.h
engine/backends/: mental_vk_debug.c  mental_vk_instance.c  mental_vk_logical_device.c  mental_vk_physical_device.c  mental_vk_queue_families.c  mental_vk_support.c  mental_vk_support.h  mental_vk_surface.c  mental_vk_swapchain.c
engine/engine/: engine.c  engine.h  mogl_support.h  vulkan_support.h
engine/project/: project.c  project.h
engine/windowmanager/: wm.c  wm.h
engine/wm/: wm.c  wm.h
mathematica/: mathematica.c  mathematica.h
